Команды для удаления и добавления элементов списка

--- a/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
@@ -219,9 +219,23 @@
                     </Grid.ColumnDefinitions>
 
                     <GroupBox Grid.Column="0" Header="Группы">
-                        <ListBox ItemsSource="{Binding Groups}" 
+                        <DockPanel>
+                            <UniformGrid DockPanel.Dock="Bottom" 
+                                         Rows="1" Margin="0,3">
+                                <Button Content="Добавить" 
+                                        Margin="0,0,3,0"
+                                        Command="{Binding CreateGroupCommand}"
+                                        />
+                                <Button Content="Удалить"
+                                        Command="{Binding DeleteGroupCommand}"
+                                        CommandParameter="{Binding SelectedGroup}"
+                                        />
+                            </UniformGrid>
+                            
+                            <ListBox ItemsSource="{Binding Groups}" 
                                  SelectedItem="{Binding SelectedGroup}"
                                  SelectedIndex="0">
+                            
                             <ListBox.ItemTemplate>
                                 <DataTemplate DataType="decanat:Group">
                                     <StackPanel Orientation="Horizontal">
@@ -231,7 +245,9 @@
                                 </DataTemplate>
                             </ListBox.ItemTemplate>
                         </ListBox>
+                        </DockPanel>
                     </GroupBox>
+                        
                     <GroupBox Grid.Column="1" Header="{Binding SelectedGroup.Name, FallbackValue='Студенты', TargetNullValue='Группа не выбрана'}">
                         <DataGrid ItemsSource="{Binding SelectedGroup.Students}"
                                   AutoGenerateColumns="False"
