--- a/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
@@ -83,7 +83,14 @@
                             <TextBlock Text="Элементы"/>
                         </GroupBox.Header>
                         <GroupBox.Resources>
-                            <DataTemplate DataType="{x:Type decanat:Group}">
+                            <ResourceDictionary>
+                                <ResourceDictionary.MergedDictionaries>
+                                    <ResourceDictionary Source="../../Resources/DataTemplates/CompositeListItemsDataTemplates.xaml"/>
+                                </ResourceDictionary.MergedDictionaries>
+                            </ResourceDictionary>
+
+                            <!-- Теперь это код в словаре CompositeListItemsDataTemplates -->
+                            <!--<DataTemplate DataType="{x:Type decanat:Group}">
                                 <TextBlock Text="{Binding Name, StringFormat=Группа {0}}"/>
                             </DataTemplate>
                             <DataTemplate DataType="{x:Type decanat:Student}">
@@ -99,8 +106,9 @@
                                 <TextBlock>
                                     Число: <TextBlock Text="{Binding}"/>
                                 </TextBlock>
-                            </DataTemplate>
+                            </DataTemplate>-->
                         </GroupBox.Resources>
+                            
                         <ListBox ItemsSource="{Binding CompositeCollection}"
                                  SelectedItem="{Binding SelectedCompositeValue}">
                         </ListBox>                        
@@ -116,7 +124,17 @@
                     </ListBox>-->
                     
                     <GroupBox Header="Выбранный элемент" Grid.Column="1">
+
                         <GroupBox.Resources>
+                            <ResourceDictionary>
+                                <ResourceDictionary.MergedDictionaries>
+                                    <ResourceDictionary Source="../../Resources/DataTemplates/CompositeItemsControlDataTemplates.xaml"/>
+                                </ResourceDictionary.MergedDictionaries>
+                            </ResourceDictionary>
+                        </GroupBox.Resources>
+
+                        <!-- Теперь эти реурсы в словаре CompositeItemsControlDataTemplates.xaml -->
+                        <!--<GroupBox.Resources>
                             <DataTemplate DataType="{x:Type decanat:Group}">
                                 <TextBlock Text="{Binding Name, StringFormat=Группа {0}}"
                                            HorizontalAlignment="Center"
@@ -146,7 +164,7 @@
                                     Число: <TextBlock Text="{Binding}"/>
                                 </TextBlock>
                             </DataTemplate>
-                        </GroupBox.Resources>
+                        </GroupBox.Resources>-->
 
                         <ContentControl Content="{Binding SelectedCompositeValue}"/>
                     </GroupBox>
@@ -192,9 +210,6 @@
                             </MouseBinding>
                         </Ellipse.InputBindings>
                     </Ellipse>
-
-
-
                 </Grid>
             </TabItem>-->
 
@@ -231,6 +246,7 @@
                                 </UniformGrid.Resources>
                                 <Button Content="Добавить" 
                                         Command="{Binding CreateGroupCommand}"
+                                        
                                         />
                                 <Button Content="Удалить"
                                         Command="{Binding DeleteGroupCommand}"
