--- a/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
@@ -237,20 +237,35 @@
                         <DockPanel>
                             <UniformGrid DockPanel.Dock="Bottom" 
                                          Rows="1" Margin="0,3">
-                                <UniformGrid.Resources>
+                                
+                                <!--<UniformGrid.Resources>
                                     <Style TargetType="Button">
                                         <Setter Property="Margin" Value="3,0"/>
                                         <Setter Property="Padding" Value="3,5"/>
                                         <Setter Property="Background" Value="White"/>
                                     </Style>
-                                </UniformGrid.Resources>
-                                <Button Content="Добавить" 
-                                        Command="{Binding CreateGroupCommand}"
-                                        
-                                        />
+                                </UniformGrid.Resources>-->
+                                
+                                <Button Command="{Binding CreateGroupCommand}"
+                                        Content="Добавить"
+                                        Style="{StaticResource CheckButtonStyle}"
+                                        Padding="0,7"
+                                        >
+                                    <!--<StackPanel Orientation="Horizontal">
+                                        <fa:ImageAwesome Icon="Solid_Check" Height="12"
+                                                         Foreground="LightGreen"
+                                                         Margin="0,0,3,0">
+                                            <fa:ImageAwesome.Effect>
+                                                <DropShadowEffect ShadowDepth="1"/>
+                                            </fa:ImageAwesome.Effect>
+                                        </fa:ImageAwesome>
+                                        <TextBlock Text="Добавить"/>
+                                    </StackPanel>-->
+                                </Button>
                                 <Button Content="Удалить"
                                         Command="{Binding DeleteGroupCommand}"
                                         CommandParameter="{Binding SelectedGroup}"
+                                        Style="{StaticResource RemoveButtonStyle}"
                                         />
                             </UniformGrid>
                             
@@ -313,6 +328,64 @@
                     </GroupBox>
                 
                 </Grid>
+            </TabItem>
+
+            <TabItem Header="Тест кнопки">
+                <Button Margin="20,20" 
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Left"
+                        Content="123"
+                        Padding="14,5"
+                        Style="{StaticResource CustomButtonStyle}"
+                        RenderTransformOrigin="0.5, 0.5"
+                        >
+                    <Button.Background>
+                        <SolidColorBrush Color="White" x:Name="ButtonBrush"/>
+                    </Button.Background>
+                    
+                    <Button.RenderTransform>
+                        <RotateTransform x:Name="ButtonRotate" Angle="0"/>
+                    </Button.RenderTransform>
+
+                    <Button.Triggers>
+                        <EventTrigger RoutedEvent="Button.Click">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <DoubleAnimation Storyboard.TargetName="ButtonRotate"
+                                                     Storyboard.TargetProperty="Angle"
+                                                     From="0" To="360"
+                                                     Duration="0:0:3"/>
+                                </Storyboard>
+                            </BeginStoryboard>                           
+                        </EventTrigger>
+
+                        <EventTrigger RoutedEvent="Button.MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetName="ButtonBrush"
+                                                    Storyboard.TargetProperty="Color"
+                                                    To="Red"
+                                                    Duration="0:0:0.1"
+                                                    >                                        
+                                    </ColorAnimation>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+
+                        <EventTrigger RoutedEvent="Button.MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetName="ButtonBrush"
+                                                    Storyboard.TargetProperty="Color"
+                                                    To="White"
+                                                    Duration="0:0:3"                                                    
+                                                    >
+                                    </ColorAnimation>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Button.Triggers>
+                </Button>
             </TabItem>
             
         </TabControl>
