Добавление и настройка виртуализации списка групп студентов

--- a/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
@@ -283,8 +283,18 @@
                             </UniformGrid>
                             
                             <ListBox ItemsSource="{Binding Source={StaticResource GroupsCollection}}" 
-                                 SelectedItem="{Binding SelectedGroup}"
-                                 SelectedIndex="0">
+                                     SelectedItem="{Binding SelectedGroup}"
+                                     SelectedIndex="0"
+                                     VirtualizingPanel.IsContainerVirtualizable="True"
+                                     VirtualizingPanel.IsVirtualizing="True"
+                                     VirtualizingPanel.VirtualizationMode="Recycling"
+                                     >
+
+                                <ListBox.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <VirtualizingStackPanel />
+                                    </ItemsPanelTemplate>
+                                </ListBox.ItemsPanel>
 
                                 <ListBox.ItemTemplate>
                                     <DataTemplate DataType="decanat:Group">
