Привязки данных в пользовательском контроле

--- a/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
@@ -519,8 +519,9 @@
             </TabItem>
 
             <TabItem Header="Статиска COVID19">
-                <view:CountriesStatisticView/>
+                <view:CountriesStatisticView DataContext="{Binding CountriesStatistic}"/>
             </TabItem>
+        
         </TabControl>
     </DockPanel>
     
