--- a/Проект_1/StartUpMVVM/Views/CountriesStatisticView.xaml
+++ b/Проект_1/StartUpMVVM/Views/CountriesStatisticView.xaml
@@ -7,9 +7,15 @@
              xmlns:fa="http://schemas.fontawesome.com/icons/"
              xmlns:vm="clr-namespace:StartUpMVVM.ViewModels"
              xmlns:m="clr-namespace:StartUpMVVM.Models"
+             xmlns:c="clr-namespace:StartUpMVVM.Infrastructure.Converters"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance vm:CountriesStatisticViewModel, d:IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <c:LocationPointToStr x:Key="LocationConverter"/>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="230"/>
@@ -20,6 +26,8 @@
 
         <GroupBox Grid.Column="0" Header="Список стран">
             <DockPanel>
+                <Button DockPanel.Dock="Top" Content="TEST" Command="{Binding Test}"/>
+                
                 <Button DockPanel.Dock="Top" Command="{Binding RefreshDataCommand}">
                     <StackPanel Orientation="Horizontal">
                         <fa:ImageAwesome Icon="Solid_ArrowDown" Height="12" Margin="0,3"/>
@@ -31,7 +39,16 @@
                         <DataTemplate DataType="m:CountryInfo">
                             <TextBlock>
                                 <TextBlock Text="{Binding Name}"/>
-                                <TextBlock Text="{Binding Location}"/>
+                                <TextBlock Text="{Binding Location, Converter={StaticResource LocationConverter}}"/>
+                                <!--<TextBlock>
+                                    <TextBlock.Text>
+                                        <Binding Path="Location" StringFormat="({0})">
+                                            <Binding.Converter>
+                                                <c:LocationPointToStr/>
+                                            </Binding.Converter>
+                                        </Binding>
+                                    </TextBlock.Text>
+                                </TextBlock>-->
                             </TextBlock>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
@@ -49,9 +66,10 @@
                 <GridSplitter VerticalAlignment="Bottom"
                               HorizontalAlignment="Stretch"
                               />
-                
+                <Slider Grid.Row="0" x:Name="ValueSlider"/>
 
-
+                <TextBlock Grid.Row="0" Margin="0,30,0,0" 
+                           Text="{Binding Value, ElementName=ValueSlider}"/>
             </Grid>
         </GroupBox>
 
