--- a/Проект_1/StartUpMVVM/Resources/Styles/Buttons.xaml
+++ b/Проект_1/StartUpMVVM/Resources/Styles/Buttons.xaml
@@ -4,7 +4,7 @@
                     >
 
     <Style x:Key="BtnBase" TargetType="ButtonBase">
-        <Setter Property="Background" Value="White" />
+        <Setter Property="Background" Value="{StaticResource WhiteBrush}" />
     </Style>
 
     <Style TargetType="Button" BasedOn="{StaticResource BtnBase}" />
@@ -15,7 +15,8 @@
     </Style>
 
     <Style x:Key="DangerBtn" TargetType="Button" BasedOn="{StaticResource BtnBase}">
-        <Setter Property="Background" Value="Red"/>
+        <Setter Property="Background" Value="{StaticResource RedBrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource WhiteBrush}"/>
     </Style>
 
     
