Создание системного меню winapi - style

--- a/Проект_1/StartUpMVVM/Resources/Styles/WindowStyle.xaml
+++ b/Проект_1/StartUpMVVM/Resources/Styles/WindowStyle.xaml
@@ -60,6 +60,9 @@
                             <Image x:Name="PART_Icon" 
                                    DockPanel.Dock="Left"
                                    Source="{TemplateBinding Icon}">
+                                <i:Interaction.Behaviors>
+                                    <b:WindowSystemIconBehavior/>
+                                </i:Interaction.Behaviors>
                             </Image>
                             
                             <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
